fix spacing

--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -34,6 +34,7 @@
     .address-search-wrapper {
       display: flex;
       justify-content: center;
+      margin-bottom: 2rem;
     }
   }
 }
